# BOW

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  requirements.txt  run_cpp.sh  run_py.sh
algos/: __init__.py  cbf.py  common.py  mppi.py
algos/envs/: navigation_2d.py  obstacle_map_2d.py
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/include/dwa/: DWA.h
benchmark/include/hrvo/: Export.h  Vector2.h
benchmark/include/ompl/: MotionPlanner.h  model.h  pch.h
benchmark/src/: DWA.cpp  MotionPlanner.cpp
bow/bow++/results/: b.json  meanstd.txt  results.txt
cmake/: CPM.cmake  FindLibCMAES.cmake  FindNLopt.cmake  FindTBB.cmake
config/: main.yaml
config/planner/: bow.yaml  cbf.yaml  dwa.yaml  hrvo.yaml  mppi.yaml
config/test/: env1_f.yaml  env2.yaml  env2_f.yaml  env3.yaml  env3_f.yaml  env4.yaml  env4_f.yaml  env5_f.yaml  env6_f.yaml
include/bow/: BOW.h  CollisionChecker.h  ParamManager.h  bow_param.h  param_manager.tpp
include/limbo/: wscript
include/limbo/benchmarks/: wscript
include/limbo/benchmarks/bayesopt/: hp_opt.cpp  simple.cpp
include/limbo/benchmarks/limbo/: bench.cpp  testfunctions.hpp
include/limbo/benchmarks/regression/: gpy.py  test_functions.hpp
include/limbo/ehvi/: README.txt  ehvi_calculations.cc  ehvi_calculations.h  ehvi_consts.h  ehvi_hvol.cc  ehvi_hvol.h  ehvi_montecarlo.cc  ehvi_montecarlo.h  ehvi_multi.cc  ehvi_multi.h  ehvi_sliceupdate.cc  ehvi_sliceupdate.h  helper.cc  helper.h  main.cc  multitest.txt  simpletest.txt
include/limbo/examples/: mono_dim.cpp  obs_multi.cpp  obs_multi_auto_mean.cpp  wscript
include/limbo/examples/experimental/: cbo.cpp  imgpo.cpp  multi.cpp  parego.cpp  wscript
include/limbo/limbo/: acqui.hpp  bayes_opt.hpp  init.hpp  kernel.hpp  limbo.hpp  mean.hpp  model.hpp  opt.hpp  stat.hpp  stop.hpp  tools.hpp
include/limbo/limbo/acqui/: ei.hpp  gp_ucb.hpp  ucb.hpp
include/limbo/limbo/bayes_opt/: bo_base.hpp  boptimizer.hpp
include/limbo/limbo/init/: grid_sampling.hpp  lhs.hpp  no_init.hpp  random_sampling.hpp  (+1 more)
include/limbo/tests/: all_combinations_template.cpp  bo_functions.cpp  test_boptimizer.cpp  test_cmaes.cpp  test_gp.cpp  test_init_functions.cpp  test_kernel.cpp  test_macros.cpp  test_mean.cpp  test_nlopt.cpp  test_optimizers.cpp  test_serialize.cpp  wscript
include/limbo/tutorials/: advanced_example.cpp  basic_example.cpp  gp.cpp  opt.cpp  statistics.cpp  wscript
log/: latest_list
result_analysis_cpp/: make_table.py  result_analysis_json.py
result_analysis_py/: analysis.py  result_analysis.py  traj_analysis.py
results/traj_analysis/: env1_bow.eps  env2_bow.eps  env3.eps  env4.eps  env5.eps  non_convex_v2.eps  nonconvex1.eps
scripts/: analysis.sh  obstacle_density.py  viz_nonconvex_poly.py  viz_trajectory.py
src/: BOW.cpp  CollisionChecker.cpp  ParamManager.cpp
test/: env1.yaml  env2.yaml  env3.yaml  env4.yaml  env5.yaml  env_list.txt  env_nonconvex.yaml  env_nonconvex2 copy.yaml  env_nonconvex2.yaml  points.txt  triangle_decomposition.py
(+101 files in other folders)
